--- a/src/app.yaml
+++ b/src/app.yaml
@@ -1,8 +1,15 @@
-application: sample-id
+application: bar-vcd-viewer
 version: 1
-runtime: python
+runtime: python27
+threadsafe: false
 api_version: 1
 
 handlers:
 - url: /.*
   script: vcdview.py
+
+libraries:
+- name: webapp2
+  version: latest
+- name: django
+  version: latest
